[metadata]
# replace with your username:
name = pytesimal
version = 0.0.1
author = Maeve Murphy Quinlan
author_email = eememq@leeds.ac.uk
description = A package to model planetesimals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/murphyqm/pytesimal
project_urls =
    Documentation = https://pytesimal.readthedocs.io/en/latest/
    Bug Tracker = https://github.com/murphyqm/pytesimal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = pytesimal
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pytest

[options.packages.find]
where = pytesimal